# onyx

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh
backend/: audit_runner.py  credential_vault.py  main.py  persistence.py  session_manager.py
frontend/: index.html
tests/: test_backend.py
tools/: ai_analyzer.py  audit_tool.py  compliance_mappings.py  evidence_capture.py  panos_audit.py  report_generator.py
